syntax = "proto3";
package ws_backend;

option go_package = ".;proto";

service Api {
  rpc StartTask (StartTaskReq) returns (StartTaskRep) {}
  rpc EndTask (EndTaskReq) returns (EndTaskRep) {}
}

message StartTaskReq {
  bool withGPU = 1;
}

message StartTaskRep {
  string taskId = 1;
  Job job = 2;
}

message EndTaskReq {
  string taskId = 1;
  repeated string error = 2;
}

message EndTaskRep {
}

message Job {
  string dockerImage = 1;
  string dataset = 2;
}